[rce] fix (gallery): remove hover and fix layout selection on iphone

--- a/rich-content-editor/src/Styles/selection-list.scss
+++ b/rich-content-editor/src/Styles/selection-list.scss
@@ -1,6 +1,6 @@
 .selectionList {
   width: 100%;
-  display: grid;
+  display: block;
 }
 
 .selectionListOption {
@@ -8,6 +8,8 @@
   text-align: center;
   margin: 0 auto 0 auto;
   cursor: pointer;
+  display: inline-block;
+  width: 25%;
 }
 
 .selectionListOption_selected {
